part 1 beamer slides

--- a/tex_project/Part 2 Project Proposal Paper/05_MiningTheUSTechnologistsData_Part2.tex
+++ b/tex_project/Part 2 Project Proposal Paper/05_MiningTheUSTechnologistsData_Part2.tex
@@ -7,7 +7,7 @@
 %\setcopyright{none}
 %\setcopyright{acmcopyright}
 %\setcopyright{acmlicensed}
-\setcopyright{rightsretained}
+%\setcopyright{rightsretained}
 %\setcopyright{usgov}
 %\setcopyright{usgovmixed}
 %\setcopyright{cagov}
@@ -31,41 +31,26 @@
 
 \begin{document}
 	\title{Mining the US Technologist data}
-	\titlenote{Produces the permission block, and
-		copyright information}
-	\subtitle{Extended Abstract}
-	\subtitlenote{The full version of the author's guide is available as
-		\texttt{acmart.pdf} document}
+%	\titlenote{Produces the permission block, and
+%		copyright information}
+%	\subtitle{Extended Abstract}
+%	\subtitlenote{The full version of the author's guide is available as
+%		\texttt{acmart.pdf} document}
 	
 	
 	\author{Abulitibu Tuguluke}
-	\authornote{Dr.~Trovato insisted his name be first.}
-	\orcid{1234-5678-9012}
+%	\authornote{MS student at CU Boulder}
+%	\orcid{1234-5678-9012}
 	\affiliation{%
 		\institution{DHI Group Inc.}
-		\streetaddress{P.O. Box 1212}
-		\city{Dublin} 
-		\state{Ohio} 
-		\postcode{43017-6221}
+		\streetaddress{6465 Greenwood Plaza Blvd}
+		\city{Greenwood Village} 
+		\state{CO} 
+		\postcode{80111}
 	}
 	\email{abtu8803@colorado.edu}
 	
 
-	
-	
-	\begin{abstract}
-		This paper provides a sample of a \LaTeX\ document which conforms,
-		somewhat loosely, to the formatting guidelines for
-		ACM SIG Proceedings.\footnote{This is an abstract footnote}
-	\end{abstract}
-	
-
-	
-	% We no longer use \terms command
-	%\terms{Theory}
-	
-	\keywords{ACM proceedings, \LaTeX,data mining}
-	
 	
 	\maketitle
 	
