--- a/tex_project/Part 2 Project Proposal Paper/05_MiningTheUSTechnologistsData_Part2.tex
+++ b/tex_project/Part 2 Project Proposal Paper/05_MiningTheUSTechnologistsData_Part2.tex
@@ -1,6 +1,6 @@
 \documentclass[sigconf]{acmart}
 
-\usepackage{booktabs} % For formal tables
+%\usepackage{booktabs} % For formal tables
 
 
 % Copyright
