--- a/codes/src/notebooks/bdf_eda.ipynb
+++ b/codes/src/notebooks/bdf_eda.ipynb
@@ -58,6 +58,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "c95f5296",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_all.area_type.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bfff45e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 13208 entries, 0 to 1328\n",
+      "Data columns (total 35 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   occ_code      13208 non-null  object \n",
+      " 1   occ_title     13208 non-null  object \n",
+      " 2   group         23 non-null     object \n",
+      " 3   tot_emp       13208 non-null  object \n",
+      " 4   emp_prse      13208 non-null  object \n",
+      " 5   h_mean        13208 non-null  object \n",
+      " 6   a_mean        13208 non-null  object \n",
+      " 7   mean_prse     13208 non-null  float64\n",
+      " 8   h_pct10       13208 non-null  object \n",
+      " 9   h_pct25       13208 non-null  object \n",
+      " 10  h_median      13208 non-null  object \n",
+      " 11  h_pct75       13208 non-null  object \n",
+      " 12  h_pct90       13208 non-null  object \n",
+      " 13  a_pct10       13208 non-null  object \n",
+      " 14  a_pct25       13208 non-null  object \n",
+      " 15  a_median      13208 non-null  object \n",
+      " 16  a_pct75       13208 non-null  object \n",
+      " 17  a_pct90       13208 non-null  object \n",
+      " 18  annual        795 non-null    object \n",
+      " 19  hourly        58 non-null     object \n",
+      " 20  year          13208 non-null  int64  \n",
+      " 21  occ_group     9731 non-null   object \n",
+      " 22  area          2658 non-null   float64\n",
+      " 23  area_title    2658 non-null   object \n",
+      " 24  area_type     2658 non-null   float64\n",
+      " 25  naics         2658 non-null   float64\n",
+      " 26  naics_title   2658 non-null   object \n",
+      " 27  i_group       2658 non-null   object \n",
+      " 28  own_code      2658 non-null   float64\n",
+      " 29  o_group       2658 non-null   object \n",
+      " 30  jobs_1000     0 non-null      float64\n",
+      " 31  loc_quotient  0 non-null      float64\n",
+      " 32  pct_total     0 non-null      float64\n",
+      " 33  prim_state    1329 non-null   object \n",
+      " 34  mean salary   13150 non-null  float64\n",
+      "dtypes: float64(9), int64(1), object(25)\n",
+      "memory usage: 3.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_all.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "3700cf16",
    "metadata": {
@@ -501,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "4d0b6f38",
    "metadata": {},
    "outputs": [
@@ -512,19 +592,42 @@
        "       '53-7065'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "major_groups = df_all['occ_code'].str.endswith('0000')\n",
+    "# major_groups = df_all['occ_code'].str.endswith('0000') # endswith 0000 is the mother node? \n",
+    "major_groups = df_all['occ_code']\n",
     "df_all['occ_code'].unique()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
+   "id": "bdc4b162",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['00-0000', '11-0000', '11-1011', ..., '53-4022', '53-6098',\n",
+       "       '53-7065'], dtype=object)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_all['occ_code'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "c6b7b7b8",
    "metadata": {
     "scrolled": false
@@ -537,29 +640,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "50b0aa1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles = sorted(list(df_all[major_groups]['occ_title'].unique()))\n"
+    "# titles = sorted(list(df_all[major_groups]['occ_title'].unique()))\n",
+    "titles = sorted(list(df_all['occ_title'].unique()))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "b077a17a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b97d454b17f46b9a0eb81e4a7169c95",
+       "model_id": "7389b5de2300445fb659fc473913cbad",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='title', options=('All Occupations', 'Architecture and Engineering …"
+       "interactive(children=(Dropdown(description='title', options=('Accountants and Auditors', 'Actors', 'Actors, Pr…"
       ]
      },
      "metadata": {},
@@ -612,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "b966e304",
    "metadata": {},
    "outputs": [],
