rest of the folders with readme files

--- a/codes/src/notebooks/data_mining_projects.ipynb
+++ b/codes/src/notebooks/data_mining_projects.ipynb
@@ -1143,9 +1143,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f09e45ed",
+   "metadata": {},
+   "source": [
+    "# knowledge graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8000aff3",
+   "id": "162cdfd0",
    "metadata": {},
    "outputs": [],
    "source": []
