--- a/codes/src/notebooks/data_mining_projects.ipynb
+++ b/codes/src/notebooks/data_mining_projects.ipynb
@@ -267,122 +267,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "7be3c295",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dice_job_title</th>\n",
-       "      <th>EMPLOYER</th>\n",
-       "      <th>JOB TITLE</th>\n",
-       "      <th>BASE SALARY</th>\n",
-       "      <th>LOCATION</th>\n",
-       "      <th>SUBMIT DATE</th>\n",
-       "      <th>START DATE</th>\n",
-       "      <th>Job_Title</th>\n",
-       "      <th>relatedSkills</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>606388</td>\n",
-       "      <td>606381</td>\n",
-       "      <td>605396</td>\n",
-       "      <td>605396</td>\n",
-       "      <td>605396</td>\n",
-       "      <td>605396</td>\n",
-       "      <td>605396</td>\n",
-       "      <td>606388</td>\n",
-       "      <td>604958</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>1180</td>\n",
-       "      <td>66795</td>\n",
-       "      <td>1770</td>\n",
-       "      <td>37871</td>\n",
-       "      <td>10474</td>\n",
-       "      <td>2749</td>\n",
-       "      <td>2898</td>\n",
-       "      <td>1180</td>\n",
-       "      <td>1101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>Systems Analyst</td>\n",
-       "      <td>TATA CONSULTANCY SERVICES LIMITED</td>\n",
-       "      <td>SYSTEMS ANALYST</td>\n",
-       "      <td>60,000</td>\n",
-       "      <td>NEW YORK, NY</td>\n",
-       "      <td>03/16/2018</td>\n",
-       "      <td>10/01/2020</td>\n",
-       "      <td>Systems Analyst</td>\n",
-       "      <td>Software development;Systems analysis;SQL;Qual...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>35607</td>\n",
-       "      <td>36892</td>\n",
-       "      <td>35605</td>\n",
-       "      <td>23291</td>\n",
-       "      <td>35070</td>\n",
-       "      <td>2384</td>\n",
-       "      <td>17112</td>\n",
-       "      <td>35607</td>\n",
-       "      <td>35607</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Dice_job_title                           EMPLOYER        JOB TITLE  \\\n",
-       "count            606388                             606381           605396   \n",
-       "unique             1180                              66795             1770   \n",
-       "top     Systems Analyst  TATA CONSULTANCY SERVICES LIMITED  SYSTEMS ANALYST   \n",
-       "freq              35607                              36892            35605   \n",
-       "\n",
-       "       BASE SALARY      LOCATION SUBMIT DATE  START DATE        Job_Title  \\\n",
-       "count       605396        605396      605396      605396           606388   \n",
-       "unique       37871         10474        2749        2898             1180   \n",
-       "top         60,000  NEW YORK, NY  03/16/2018  10/01/2020  Systems Analyst   \n",
-       "freq         23291         35070        2384       17112            35607   \n",
-       "\n",
-       "                                            relatedSkills  \n",
-       "count                                              604958  \n",
-       "unique                                               1101  \n",
-       "top     Software development;Systems analysis;SQL;Qual...  \n",
-       "freq                                                35607  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llllllllll}\n",
+      "\\toprule\n",
+      "{} &   Dice\\_job\\_title &                           EMPLOYER &        JOB TITLE & BASE SALARY &      LOCATION & SUBMIT DATE &  START DATE &        Job\\_Title &                                      relatedSkills \\\\\n",
+      "\\midrule\n",
+      "count  &          2495079 &                            2495052 &          2467304 &     2467304 &       2467304 &     2467304 &     2467304 &          2495079 &                                            2489574 \\\\\n",
+      "unique &             1180 &                              66795 &             1770 &       37871 &         10474 &        2749 &        2898 &             1180 &                                               1101 \\\\\n",
+      "top    &  Systems Analyst &  TATA CONSULTANCY SERVICES LIMITED &  SYSTEMS ANALYST &      60,000 &  NEW YORK, NY &  03/13/2015 &  09/01/2015 &  Systems Analyst &  Software development;Systems analysis;SQL;Qual... \\\\\n",
+      "freq   &           198860 &                             157580 &           198719 &      146505 &        136642 &       14268 &       32532 &           198860 &                                             198860 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "h1b_test.describe(include='all')"
+    "print(h1b.describe(include='all').to_latex())"
    ]
   },
   {
