--- a/tex_project/Part 1 Team & Topic & Dataset/05_MiningTheUSTechnologistsData_Part1.tex
+++ b/tex_project/Part 1 Team & Topic & Dataset/05_MiningTheUSTechnologistsData_Part1.tex
@@ -124,7 +124,7 @@ There is already a skillsets collection been done on tons of job descriptions fo
 \end{frame}
 
 \begin{frame}
-	\frametitle{Data Description for US Bureau of  Labour statistics} 
+	\frametitle{Data Description for US Bureau of  Labour statistics\footnote{Internal jobs data will not be shared at any stage/part of this project.}} 
 	
 	\resizebox{\textwidth}{!}{%
 	\begin{tabular}{llllrrllrllllllllllllrlrlrrllrlrrrl}
@@ -147,10 +147,10 @@ There is already a skillsets collection been done on tons of job descriptions fo
 	
 	}
 
-\begin{tcolorbox}[colback=red,colframe=blue,title= Note:]
 
-Internal jobs data will not be shared at any stage/part of this project.
-\end{tcolorbox}
+
+
+
 
 
 \end{frame}
@@ -172,7 +172,7 @@ Internal jobs data will not be shared at any stage/part of this project.
 	\frametitle{List of tool(s)sets}
 	\begin{itemize}
 		\item Beautifulsoup for mining
-		\item Python library for all the computing and NLP analysis: notably NumPy, Pandas, SK-learn,SpaCy, etc. 
+		\item Python library for all the computing and  analysis: notably NumPy, Pandas, SK-learn,SpaCy, etc. 
 				\item JSON for data store
 	\end{itemize}
 \end{frame}
